--- a/requirements.txt
+++ b/requirements.txt
@@ -69,9 +69,7 @@ tensorboard==2.1.0
 tensorboardX==2.0
 thinc==7.3.1
 tokenizers==0.9.4
-torch==1.7.1+cu110
-torchaudio==0.7.2
-torchvision==0.8.2+cu110
+# torch==1.7.1+cu110
 tqdm==4.43.0
 transformers==4.0.1
 typing-extensions==3.7.4.3
